# puppy-love

./: .backend.env  .dockerignore  .gitignore  .tern-project  Dockerfile  Gopkg.toml  LICENSE  README.md  app.js  config.js  db.js  docker-compose.yml  glide.yaml  loop.sh  main.go  package.json  passAuth.js  puppy.conf.nginx  puppy.go  puppy.nginx.conf  router.js  server.js
backend/: .gitignore  app.js  config.js  db.js  package.json  passAuth.js  router.js  server.js
backend/controllers/: genkey.js  twoparty.js  user.js  (+1 more)
config/: config.go
controllers/: compute.go  declare.go  heart.go  list.go  session.go  stats.go  twoparty.js  user.go  user.js  utils.js  votes.go
db/: mongo.go  redis.go
frontend/: .angular-cli.json  .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  proxy.conf.json  tslint.json
models/: compute.go  declare.go  heart.go  hearts.go  twopartycomm.js  user.go  user.js  vote.go
report/: .gitignore  puppylove.tex  sigtbd-style.cls
router/: router.go
scripts/: allusers.py  compute.sh  login.sh  logsof.sh  newuser.sh  package-lock.json  script.js  smallcompute.sh
service/: signup.go
service/results/: .gitignore  Dockerfile  README.md  config.go  results.cabal  results.go  stack.yaml  user.go
service/results/app/: Main.hs
service/results/src/: Lib.hs
utils/: http.go  utils.go
views/: .gitignore  Dockerfile  bower.json  dashboard.html  default.css  icons.css  index.html  nginx.prod.conf  package.json  register.html  ribbon.css  setpass.html  tslint.json  webpack.prod.config.js
(+177 files in other folders)
