name:                results
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pclubiitk/puppy-love
license:             BSD3
license-file:        LICENSE
author:              Saksham Sharma
maintainer:          saksham@acehack.org
copyright:           2017 Saksham Sharma
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , mongoDB
                     , mtl
  default-language:    Haskell2010

executable results-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , results
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pclubiitk/puppy-love
